--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-purescript": "~0.5.2",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-jsvalidate": "^0.2.2",
+    "grunt-purescript": "^0.6.0"
   }
 }
