--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-plumber": "^1.0.0",
-    "gulp-purescript": "^0.5.0",
+    "rimraf": "^2.3.3"
+  },
+  "dependencies": {
+    "gulp-plumber": "^1.0.0",
+    "gulp-purescript": "^0.4.2",
     "rimraf": "^2.3.3"
   }
 }
