--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,6 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-foldable-traversable": "~0.4.0"
+    "purescript-foldable-traversable": "^0.4.0"
   }
 }
