--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-foldable-traversable": "^1.0.0-rc.2"
+    "purescript-foldable-traversable": "^1.0.0"
   }
 }
