--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-foldable-traversable": "^3.0.0"
+    "purescript-foldable-traversable": "#compiler/0.12"
   }
 }
