--- a/bower.json
+++ b/bower.json
@@ -20,10 +20,10 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-control": "^4.0.0",
-    "purescript-foldable-traversable": "^4.0.0",
-    "purescript-invariant": "^4.0.0",
-    "purescript-newtype": "^3.0.0",
-    "purescript-prelude": "^4.0.0"
+    "purescript-control": "master",
+    "purescript-foldable-traversable": "master",
+    "purescript-invariant": "master",
+    "purescript-newtype": "master",
+    "purescript-prelude": "master"
   }
 }
