--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "git://github.com/purescript/purescript-identity.git"
+    "url": "https://github.com/purescript/purescript-identity.git"
   },
   "ignore": [
     "**/.*",
