--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "git://github.com/purescript/purescript-identity.git"
+    "url": "https://github.com/purescript/purescript-identity.git"
   },
   "ignore": [
     "**/.*",
@@ -20,9 +20,9 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-control": "master",
-    "purescript-invariant": "master",
-    "purescript-newtype": "master",
-    "purescript-prelude": "master"
+    "purescript-control": "^5.0.0",
+    "purescript-invariant": "^5.0.0",
+    "purescript-newtype": "^4.0.0",
+    "purescript-prelude": "^5.0.0"
   }
 }
